- 프로젝트 파일 갱신
- RuleAdministrator
=> CardVisualizerWorker 삭제

- RuleCheckWorker
=> AdjustExecuteOrder, AttackCardOnRow, GoingToNextTurn 함수 내역 변경
     AdjustExecuteOrder => 인덱스에 의존하는 삭제에서 객체에 의존하는 삭제로 변경, 리스트 정리 후, 현재 턴 카드의 인덱스를 재정의해준다.
     AttackCardOnRow => 카드의 액션 진행 상태에 맞춰서 공격 여부를 체크할 수 있게 바꿈
     GoingToNextTurn => 카드의 액션 진행이 확실히 끝났을 때에만 턴을 넘길 수 있게 로직을 추가함.

--- a/GaramGame.CSharp.csproj
+++ b/GaramGame.CSharp.csproj
@@ -65,19 +65,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Script\ConstantDefine.cs" />
-    <Compile Include="Assets\Script\Object\CharacterCard.cs" />
+    <Compile Include="Assets\Script\Object\CharacterCard\CharacterCardAdapter\CardAttackEffect.cs" />
+    <Compile Include="Assets\Script\Object\CharacterCard\CharacterCardAdapter\CardHitEffect.cs" />
+    <Compile Include="Assets\Script\Object\CharacterCard\CharacterCardAdapter\CardVisualizeEffect.cs" />
+    <Compile Include="Assets\Script\Utilities\ConstantDefine.cs" />
+    <Compile Include="Assets\Script\Utilities\CustomUtility.cs" />
+    <Compile Include="Assets\Script\Object\CharacterCard\CharacterCard.cs" />
+    <Compile Include="Assets\Script\Object\CharacterCard\CharacterCardAdapter\CardVisualizer.cs" />
     <Compile Include="Assets\Script\Object\ObjectPoolManager.cs" />
     <Compile Include="Assets\Script\Rule\CardMovementWorker.cs" />
     <Compile Include="Assets\Script\Rule\CardStatusCheckWorker.cs" />
-    <Compile Include="Assets\Script\Rule\CardVisualizeWorker.cs" />
     <Compile Include="Assets\Script\Rule\RuleAdministrator.cs" />
     <Compile Include="Assets\Script\Rule\RuleCheckWorker.cs" />
     <Compile Include="Assets\Script\Rule\SkillCardWorker.cs" />
-    <Compile Include="Assets\Script\CustomUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Resources\Wood texture floor_01\readme.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
